@@ -1,4 +1,4 @@
-MANIFEST for ded, version t19910604
+MANIFEST for ded, version t19910605
 --------------------------------------------------------------------------------
 MANIFEST                        this file
 Makefile                        top-level makefile for unix directory editor
